# image-recognition

./: .gitignore  README.md  pyproject.toml  tox.ini
docs/: 02_Datasets.md  Setup.md
src/core/: dataset.py
src/scripts/: dataset.py
tests/scripts/: test_dataset.py
